non-working initial boilerplate code for detecting and extracting a ZIP ufo file (I'm having issues while trying to setup RequireJS to use jsziptools, which is a non-AMD js lib).

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "app/lib/obtainJS"]
 	path = app/lib/obtainJS
 	url = https://github.com/graphicore/obtainJS.git
+[submodule "app/lib/jsziptools"]
+	path = app/lib/jsziptools
+	url = https://github.com/ukyo/jsziptools.git
