--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "inherits": "2.0.1",
     "chokidar": "^0.10.4",
     "socket.io": "^1.2.0",
-    "graceful-readlink": ">= 1.0.0"
+    "graceful-readlink": ">= 1.0.0",
+    "fontkit": "~1.0.3"
   }
 }
